[package]
name = "eztry"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["time", "macros", "rt", "fs"] }
eztry-macros = { workspace = true, optional = true }
serde = { version = "1.0.217", features = ["derive"] }

[features]
macros = ["dep:eztry-macros"]

[workspace]
members = [
    # public code
    ".",
    "src/eztry-macros",

    # tests
    "tests",

    # examples
    "examples/sqlx_sqlite_example",
    "examples/fs_example",
]


[workspace.dependencies]
eztry = { path = "." }
eztry-macros = { path = "src/eztry-macros" }
